--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-core": "^5.1.9",
     "babel-loader": "^5.0.0",
     "css-loader": "^0.10.1",
+    "lorem-ipsum": "^1.0.1",
     "style-loader": "^0.10.2",
     "webpack": "^1.8.4",
     "webpack-dev-server": "^1.8.0"
