--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "d3.js"
   ],
   "author": "Tobiáš Potoček",
+  "email": "tobiaspotocek@gmail.com",
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^5.1.9",
