--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "d3-ldvm-pipeline",
   "version": "1.0.0",
   "description": "D3 visualizer of LDVM pipeline",
-  "main": "index.js",
+  "repository": "https://github.com/tobice/d3-ldvm-pipeline",
+  "main": "dist/d3LdvmPipeline.min.js",
   "scripts": {
     "dev-server": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --config ./webpack/dev-server.js --progress --colors --port 9090 --hot --inline",
-    "build": "./node_modules/webpack/bin/webpack.js --config ./webpack/build.js --progress --colors"
+    "build": "./node_modules/webpack/bin/webpack.js --config ./webpack/build.js"
   },
   "keywords": [
-    "d3.js"
+    "d3.js ldvm"
   ],
   "author": "Tobiáš Potoček",
   "email": "tobiaspotocek@gmail.com",
@@ -17,6 +18,7 @@
     "babel-core": "^5.1.9",
     "babel-loader": "^5.0.0",
     "css-loader": "^0.10.1",
+    "d3": "^3.5.5",
     "lorem-ipsum": "^1.0.1",
     "style-loader": "^0.10.2",
     "webpack": "^1.8.4",
